--- a/tinyproxy.conf
+++ b/tinyproxy.conf
@@ -3,8 +3,12 @@ Timeout 600
 
 LogLevel Info
 
+allow 192.168.42.10/32
+
 upstream http 127.0.0.1:4444 ".i2p"
 upstream socks5 127.0.0.1:9050 ".onion"
+upstream socks5 127.0.0.1:1080 "200::/7"
+upstream socks5 127.0.0.1:1080 ".pk.ygg"
 
 MaxClients 100
 DisableViaHeader Yes
